CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(GameServer)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(tscpdk_BINARY_DIR)
    SET(EXECUTABLE_OUTPUT_PATH ${tscpdk_BINARY_DIR})
ENDIF(tscpdk_BINARY_DIR)

ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-DLUA_USE_MKSTEMP)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} GAMESERVER_SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/Logic GAMESERVER_SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/lua GAMESERVER_SRC)

INCLUDE_DIRECTORIES(
    ${tscpdk_SOURCE_DIR}/src
    ${tscpdk_SOURCE_DIR}/src/tscpdk
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/Logic
    ${PROJECT_SOURCE_DIR}/lua
)
LINK_DIRECTORIES(${EXECUTABLE_OUTPUT_PATH})


ADD_EXECUTABLE(GameServer ${GAMESERVER_SRC})
ADD_DEPENDENCIES(GameServer tscpdk)
TARGET_LINK_LIBRARIES(GameServer tscpdk)

IF(WIN32)
    IF(UNIX)
        # CYGWIN
    ELSE(UNIX)
        # MSVC
    ENDIF(UNIX)
ELSEIF(UNIX)
    # GNU
    TARGET_LINK_LIBRARIES(GameServer pthread rt dl)
ENDIF(WIN32)
